--- a/LCTMoodle/Views/BaiVietBaiTap/ChamDiem.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/ChamDiem.cshtml
@@ -78,7 +78,7 @@
         </section>
         <section>
             <a class="button nguy-hiem" data-chuc-nang="xoa-nhieu">Xóa bài nộp</a>
-            <a class="button">Tải tập tin</a>
+            <a class="button" data-chuc-nang="tai-nhieu">Tải tập tin</a>
         </section>
     </section>
     <section class="noi-dung">
@@ -152,7 +152,7 @@
     <section class="khung-nut lct-form">
         <section>
             <a class="button nguy-hiem" data-chuc-nang="xoa-nhieu">Xóa bài nộp</a>
-            <a class="button">Tải tập tin</a>
+            <a class="button" data-chuc-nang="tai-nhieu">Tải tập tin</a>
         </section>
         <section>
             <a class="button" data-chuc-nang="chuyen-diem">Cập nhật vào bảng</a>
