--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -2136,4 +2136,9 @@
     background-color: #fcfcfc;
 }
 
+.lct-bang .tbody .tr:hover,
+.lct-bang tbody tr:hover {
+    background-color: #f5f5f5;
+}
+
 /*#endregion */
