--- a/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
@@ -1,10 +1,9 @@
-﻿@model DTOLayer.BinhLuanDTO
+﻿@model DTOLayer.BinhLuanBaiVietDienDanDTO
 
 <form data-doi-tuong="binh-luan-form" class="lct-form" data-an-rang-buoc @(Model != null ? "data-cap-nhat" : null)>
-    <input name="LoaiDoiTuong" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
     @if (Model == null)
     {
-        <input name="MaDoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />   
+        <input name="MaBaiVietDienDan" value="@ViewData["MaBaiVietDienDan"]" type="hidden" />   
     }
     else
     {
@@ -24,14 +23,25 @@
                     <input 
                             @if (Model != null && Model.tapTin != null) 
                             {    
-                                @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BinhLuan_@(Model.loaiDoiTuong)_TapTin"
+                                @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BinhLuanBaiVietDienDan_TapTin"
                             } type="file" name="MaTapTin" />
 
                 </article>
             </article>
         </li>
-        <li style="min-width: 55px; max-width: 55px; margin: 0; margin-left: 4px;">
-            <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">@(Model == null ? "Đăng" : "Sửa")</button>
-        </li>
+            @if (Model == null)
+            {
+                <li style="min-width: 55px; max-width: 55px; margin: 0; margin-left: 4px;">
+                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">Đăng</button>
+                </li>
+            }
+            else
+            {
+                <li style="min-width: 114px; max-width: 110px; margin: 0; margin-left: 4px;">
+                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">Sửa</button>
+                    <span style="min-width: 4px;"></span>
+                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan" data-chuc-nang="huy" type="button">Hủy</button>
+                </li>
+            }
     </ul>
 </form>
