--- a/LCTMoodle/Views/Quyen/QuyenChuDe.cshtml
+++ b/LCTMoodle/Views/Quyen/QuyenChuDe.cshtml
@@ -58,7 +58,7 @@
         Quản lý quyền
     </section>
     <section class="noi-dung">
-        <article class="khung-chua">
+        <article id="khung_quan_ly_quyen" class="khung-chua">
             <section class="khung-tren">
                 <section class="khung-nhom">
                     <section class="khung-tim-them lct-form">
@@ -108,7 +108,7 @@
                     </ul>
                 </section>
                 <section class="khung-quyen">
-                    <section id="mo_ta_pham_vi" class="mo-ta">
+                    <section id="mo_ta_nhom" class="mo-ta">
                         Tùy chỉnh quyền cho nhóm
                     </section>
                     <ul id="danh_sach_quyen" class="danh-sach lct-form">                        
