--- a/LCTMoodle/Views/Quyen/_Item_Nhom.cshtml
+++ b/LCTMoodle/Views/Quyen/_Item_Nhom.cshtml
@@ -1,15 +1,24 @@
 ﻿@model DTOLayer.NhomNguoiDungDTO
+@{
+    bool coTheXoa = string.IsNullOrWhiteSpace(Model.giaTri);
+}
 
-<li class="item" data-doi-tuong="item-nhom" data-ma="@Model.ma">
+<li class="item" data-doi-tuong="item-nhom" data-ma="@Model.ma" data-mo-ta="@Model.moTa">
     <a data-chuc-nang="chon-nhom">@Model.ten</a>
-    <section class="khung-chuc-nang-lct ben-trai" style="right: 3px; top: 3px;">
-        <ul data-doi-tuong="cnn-@Model.ma">
-            <li>
-                <a data-chuc-nang="xoa-nhom">Xóa nhóm</a>
-            </li>
-        </ul>
-        <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cnn-@Model.ma">
-            <i class="pe-7f-config"></i>
-        </button>
-    </section>
+    @if (coTheXoa)
+    {
+        <section class="khung-chuc-nang-lct ben-trai" style="right: 3px; top: 3px;">
+            <ul data-doi-tuong="cnn-@Model.ma">
+                @if (coTheXoa)
+                {
+                    <li>
+                        <a data-chuc-nang="xoa-nhom">Xóa nhóm</a>
+                    </li>   
+                }
+            </ul>
+            <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cnn-@Model.ma">
+                <i class="pe-7f-config"></i>
+            </button>
+        </section>   
+    }
 </li>
