--- a/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
+++ b/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
@@ -57,7 +57,7 @@
         Quản lý quyền khóa học
     </section>
     <section class="noi-dung">
-        <article class="khung-chua">
+        <article id="khung_quan_ly_quyen" class="khung-chua">
             <section class="khung-tren">
                 <section class="khung-nhom">
                     <section class="khung-tim-them lct-form">
@@ -72,7 +72,7 @@
                         <ul id="danh_sach_nhom" class="danh-sach">
                             @if (danhSachNhom != null)
                             {
-                                foreach(var nhom in danhSachNhom)
+                                foreach (var nhom in danhSachNhom)
                                 {
                                     @Html.Partial("~/Views/Quyen/_Item_Nhom.cshtml", nhom)
                                 }
@@ -101,7 +101,7 @@
                     </ul>
                 </section>
                 <section class="khung-quyen">
-                    <section id="mo_ta_pham_vi" class="mo-ta">
+                    <section id="mo_ta_nhom" class="mo-ta">
                         Tùy chỉnh quyền cho nhóm
                     </section>
                     <ul id="danh_sach_quyen" class="danh-sach lct-form">
